correction du contraste

--- a/style.css
+++ b/style.css
@@ -739,22 +739,22 @@ h4 {
 }
 
 .cta-form {
-    background: #c27956!important;
+    background: #F3976C!important;
     color: #ffffff!important; 
 }
 .cta-form:hover {
     background: #ffffff!important;
-    color:  #c27956!important;
+    color:  #F3976C!important;
     box-shadow: 0px 0px 2px rgb(0, 0, 0);
 }
 
 .btn-atomic-tangerine {
     background: #ffffff;
-    color: #c27956;
+    color: #F3976C;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956;
+    background: #F3976C;
     color:  #ffffff;
     box-shadow: 0px 0px 2px rgb(0, 0, 0);
 }
